# pi_robo

./: .gitignore  Cargo.toml  deny.toml  package-lock.json  package.json
.github/workflows/: ci.yml  publish-model-catalog.yml
.trellis/spec/pi-ai/backend/: rust-foundation-contracts.md
.trellis/tasks/07-17-rust-rewrite/: design.md  grok-build-research.md  implement.md  prd.md  task.json  traceability.md
.trellis/tasks/07-20-rust-agent-tools/: design.md  implement.md  prd.md  task.json
.trellis/tasks/07-20-rust-cross-platform-takeover/: design.md  implement.md  prd.md  task.json
.trellis/tasks/07-20-rust-data-resources/: design.md  prd.md  task.json
.trellis/tasks/07-20-rust-foundation-contracts/: implement.md  prd.md  task.json
.trellis/tasks/07-20-rust-headless-cli/: prd.md  task.json
.trellis/tasks/07-20-rust-m1-gate/: design.md  implement.md  prd.md  task.json
.trellis/tasks/07-20-rust-provider-auth-parity/: design.md  implement.md  prd.md  task.json
.trellis/tasks/07-20-rust-provider-protocols/: design.md  implement.md  prd.md  task.json
.trellis/tasks/07-20-rust-rpc-integrations/: design.md  implement.md  prd.md  task.json
.trellis/tasks/07-20-rust-runtime-parity/: design.md  implement.md  prd.md  task.json
.trellis/tasks/07-20-rust-tui/: design.md  implement.md  prd.md  task.json
.trellis/tasks/archive/2026-07/07-20-rust-agent-tools/: design.md  implement.md  prd.md  task.json
.trellis/tasks/archive/2026-07/07-20-rust-data-resources/: implement.md  task.json
.trellis/tasks/archive/2026-07/07-20-rust-foundation-contracts/: design.md  implement.md  prd.md  task.json
.trellis/tasks/archive/2026-07/07-20-rust-headless-cli/: design.md  implement.md  prd.md  task.json
.trellis/tasks/archive/2026-07/07-20-rust-provider-protocols/: design.md  implement.md  task.json
.trellis/workspace/mj/: index.md  journal-1.md
rust/: DEPENDENCIES.md  README.md
rust/assets/: models.json
rust/crates/pi-agent/: Cargo.toml
rust/crates/pi-agent/src/: lib.rs
rust/crates/pi-agent/tests/: event_trace.rs
rust/crates/pi-cli/: Cargo.toml
rust/crates/pi-cli/src/: app.rs  args.rs  cancellation.rs  input.rs  lib.rs  output.rs  production.rs  session.rs
rust/crates/pi-cli/tests/: args_contract.rs  binary_protocol_smoke.rs  headless_smoke.rs  initialization_contract.rs  input_contract.rs  mode_contract.rs  model_tool_contract.rs  no_node_runtime.rs  output_contract.rs  production_registry.rs  protocol_smoke.rs  session_contract.rs  signal_cleanup.rs
rust/crates/pi-cli/tests/support/: mod.rs
rust/crates/pi-model/: Cargo.toml
rust/crates/pi-model/src/: lib.rs
rust/crates/pi-protocol/: Cargo.toml
rust/crates/pi-protocol/src/: error.rs  events.rs  lib.rs  message.rs  model.rs  session.rs  settings.rs
rust/crates/pi-protocol/tests/: contracts.rs
rust/crates/pi-provider/: Cargo.toml
rust/crates/pi-provider/src/: anthropic.rs  clock.rs  common.rs  config.rs  error.rs  google.rs  lib.rs  openai_chat.rs  openai_responses.rs  sse.rs  transport.rs
rust/crates/pi-provider/tests/: anthropic_contract.rs  cross_protocol_contract.rs  error_contract.rs  fixture_contract.rs  google_contract.rs  openai_chat_contract.rs  openai_responses_contract.rs  sse_contract.rs  transport_contract.rs
rust/crates/pi-resources/: Cargo.toml
rust/crates/pi-resources/src/: context.rs  lib.rs  prompt.rs  skills.rs
rust/crates/pi-resources/tests/: context_contract.rs  skills_contract.rs  system_prompt_contract.rs  trust_matrix.rs
rust/crates/pi-resources/tests/support/: mod.rs
rust/crates/pi-runtime/: Cargo.toml
rust/crates/pi-runtime/src/: lib.rs
rust/crates/pi-runtime/tests/: compaction_contract.rs  event_trace.rs  retry_contract.rs
rust/crates/pi-runtime/tests/support/: mod.rs
rust/crates/pi-store/: Cargo.toml
rust/crates/pi-store/src/: auth.rs  error.rs  lib.rs  models.rs  paths.rs  session.rs  settings.rs  trust.rs
rust/crates/pi-store/tests/: auth_contract.rs  config_value_contract.rs  models_contract.rs  paths_contract.rs  session_v3_contract.rs  settings_contract.rs  trust_matrix.rs  typescript_interop.rs
rust/crates/pi-store/tests/support/: mod.rs
rust/crates/pi-test-support/: Cargo.toml
rust/crates/pi-test-support/src/: compatibility.rs  lib.rs
rust/crates/pi-test-support/tests/: compatibility.rs  faux_contract.rs  support.rs  workspace_policy.rs
rust/crates/pi-tools/: Cargo.toml
rust/crates/pi-tools/src/: bash.rs  edit.rs  image_processing.rs  lib.rs  mutation.rs  path.rs  read.rs  truncate.rs  write.rs
rust/crates/pi-tools/tests/: bash_contract.rs  bash_process_tree.rs  edit_contract.rs  image_contract.rs  mutation_queue.rs  path_contract.rs  read_contract.rs  truncation_contract.rs  typescript_contract.rs  write_contract.rs
rust/crates/pi-tools/tests/support/: mod.rs
rust/fixtures/: compatibility.json
rust/fixtures/agent/: event-traces.json
rust/fixtures/cli/: contracts.json
rust/fixtures/protocol/: assistant-events.json  messages.json  settings.json
rust/fixtures/providers/: anthropic-messages.json  faux.json  google-generative-language.json  openai-chat.json  openai-responses.json
rust/fixtures/resources/: discovery.json
rust/fixtures/runners/: session-interop.ts
rust/fixtures/runtime/: policies.json
rust/fixtures/sessions/: session-v3.jsonl
rust/fixtures/store/: auth-trust.json  models.json  settings.json
rust/fixtures/tools/: contracts.json
rust/scripts/: package-pi-rs.sh
