[package]
name = "pi-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
pi-model = { workspace = true }
pi-protocol = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
