[package]
name = "pi-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
futures-util = { workspace = true }
pi-model = { workspace = true }
pi-protocol = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
pi-test-support = { workspace = true }

[lints]
workspace = true
