[package]
name = "pi-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
pi-agent = { workspace = true }
pi-model = { workspace = true }
pi-protocol = { workspace = true }
pi-provider = { workspace = true }
pi-resources = { workspace = true }
pi-runtime = { workspace = true }
pi-store = { workspace = true }
pi-tools = { workspace = true }

[lints]
workspace = true
