[package]
name = "pi-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
clap = { workspace = true }
futures-util = { workspace = true }
pi-agent = { workspace = true }
pi-model = { workspace = true }
pi-protocol = { workspace = true }
pi-provider = { workspace = true }
pi-resources = { workspace = true }
pi-runtime = { workspace = true }
pi-store = { workspace = true }
pi-tools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
pi-test-support = { workspace = true }

[lints]
workspace = true
