[package]
name = "pi-provider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
base64 = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
httpdate = { workspace = true }
pi-model = { workspace = true }
pi-protocol = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
pi-test-support = { workspace = true }

[lints]
workspace = true
