[package]
name = "pi-test-support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
futures-core = { workspace = true }
pi-model = { workspace = true }
pi-protocol = { workspace = true }
pi-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
