[package]
name = "pi-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
base64 = { workspace = true }
image = { workspace = true }
pi-agent = { workspace = true }
pi-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
unicode-normalization = { workspace = true }

[dev-dependencies]
pi-test-support = { workspace = true }

[lints]
workspace = true
